# atemr_simulation

./: CMakeLists.txt  README.md  package.xml
config/: sim_control.yaml
launch/: atemr_world.launch
models/bed/: bed.sdf  model.config
models/bed/meshes/: bed.dae
models/floor/: floor.sdf  model.config
models/floor/meshes/: floor.dae  floor_cols.stl
models/sofa/: model.config  sofa.sdf
models/sofa/meshes/: sofa.dae
models/table/: model.config  table.sdf
models/table/meshes/: table.dae
models/wall/: model.config  wall.sdf
models/wall/meshes/: walls_col.stl
worlds/: residential_unit.world  three-fold-verse.world
